--- a/package.json
+++ b/package.json
@@ -2,17 +2,30 @@
   "name": "gx402",
   "module": "main.ts",
   "main": "./main.ts",
-  "version": "1.3.6",
+  "version": "1.3.7",
   "type": "module",
   "private": false,
+  "bin": {
+    "gx": "./src/cli.ts"
+  },
+  "files": [
+    "main.ts",
+    "src",
+    "app",
+    "dist"
+  ],
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/react": "^19.0.0"
   },
   "peerDependencies": {
-    "typescript": "^5"
+    "typescript": "^5",
+    "melina": "^1.0.0"
   },
   "dependencies": {
     "@ments/utils": "1.0.2",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "zod": "^3.25.67"
   }
 }
